--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "auth": "graph auth",
     "codegen": "graph codegen ./subgraph.yaml",
-    "deploy": "graph deploy --product hosted-service",
+    "deploy": "graph deploy --studio seedchain",
     "create-local": "graph create --node http://127.0.0.1:8020/ nft-subgraph",
     "deploy-local": "graph deploy --node http://127.0.0.1:8020/ --ipfs http://127.0.0.1:5001/ nft-subgraph ./subgraph.template.yaml"
   },
